{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 55,
  "lineage": "a7e54cf8-4cac-e0d8-654f-3d8f400d466b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "rearc-quest-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:loadbalancer/app/rearc-quest-alb/5ac5888f2d81f31f",
            "arn_suffix": "app/rearc-quest-alb/5ac5888f2d81f31f",
            "dns_name": "rearc-quest-alb-1188266592.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:870242392016:loadbalancer/app/rearc-quest-alb/5ac5888f2d81f31f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rearc-quest-alb",
            "security_groups": [
              "sg-0b79ba603f655f720"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a93bef9850567dfd"
              },
              {
                "subnet_id": "subnet-0b2631e90c07d2d1f"
              },
              {
                "subnet_id": "subnet-0b763d11fae544850"
              }
            ],
            "subnets": [
              "subnet-0a93bef9850567dfd",
              "subnet-0b2631e90c07d2d1f",
              "subnet-0b763d11fae544850"
            ],
            "vpc_id": "vpc-0b47cfddef4659960",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.rearc-quest-alb-security-group",
            "aws_subnet.rearc-quest-subnet-1",
            "aws_subnet.rearc-quest-subnet-2",
            "aws_subnet.rearc-quest-subnet-3",
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rearc-quest-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:listener/app/rearc-quest-alb/5ac5888f2d81f31f/1b672cdc94e1a615",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:targetgroup/rearc-quest-target-group/b377ec34429fcc04",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:870242392016:listener/app/rearc-quest-alb/5ac5888f2d81f31f/1b672cdc94e1a615",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:loadbalancer/app/rearc-quest-alb/5ac5888f2d81f31f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.rearc-quest-alb",
            "aws_alb_target_group.rearc-quest-target-group",
            "aws_security_group.rearc-quest-alb-security-group",
            "aws_subnet.rearc-quest-subnet-1",
            "aws_subnet.rearc-quest-subnet-2",
            "aws_subnet.rearc-quest-subnet-3",
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rearc-quest-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:listener/app/rearc-quest-alb/5ac5888f2d81f31f/2cb1916fd90e1288",
            "certificate_arn": "arn:aws:iam::870242392016:server-certificate/rearc-quest-ssl-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:targetgroup/rearc-quest-target-group/b377ec34429fcc04",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:870242392016:listener/app/rearc-quest-alb/5ac5888f2d81f31f/2cb1916fd90e1288",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:loadbalancer/app/rearc-quest-alb/5ac5888f2d81f31f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.rearc-quest-alb",
            "aws_alb_target_group.rearc-quest-target-group",
            "aws_iam_server_certificate.rearc-quest-ssl-cert",
            "aws_security_group.rearc-quest-alb-security-group",
            "aws_subnet.rearc-quest-subnet-1",
            "aws_subnet.rearc-quest-subnet-2",
            "aws_subnet.rearc-quest-subnet-3",
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "rearc-quest-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:870242392016:targetgroup/rearc-quest-target-group/b377ec34429fcc04",
            "arn_suffix": "targetgroup/rearc-quest-target-group/b377ec34429fcc04",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:870242392016:targetgroup/rearc-quest-target-group/b377ec34429fcc04",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rearc-quest-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "dependencies": [
            "aws_alb.rearc-quest-alb",
            "aws_security_group.rearc-quest-alb-security-group",
            "aws_subnet.rearc-quest-subnet-1",
            "aws_subnet.rearc-quest-subnet-2",
            "aws_subnet.rearc-quest-subnet-3",
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rearc-quest-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-088a63e19f1d4fa1c",
            "id": "rtb-088a63e19f1d4fa1c",
            "owner_id": "870242392016",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a900dff5c28d60d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rearc-quest-internet-gateway",
            "aws_vpc.rearc-quest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rearc-quest-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:internet-gateway/igw-0a900dff5c28d60d6",
            "id": "igw-0a900dff5c28d60d6",
            "owner_id": "870242392016",
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rearc-quest-alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:security-group/sg-0b79ba603f655f720",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b79ba603f655f720",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rearc-quest-alb-security-group",
            "name_prefix": "",
            "owner_id": "870242392016",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rearc-quest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rearc-quest-ecs-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:security-group/sg-0d9e6c962574f962c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9e6c962574f962c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "rearc-quest-ecs-security-group",
            "name_prefix": "",
            "owner_id": "870242392016",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rearc-quest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rearc-quest-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:subnet/subnet-0b763d11fae544850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0b763d11fae544850",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870242392016",
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rearc-quest-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:subnet/subnet-0a93bef9850567dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0a93bef9850567dfd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870242392016",
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rearc-quest-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:subnet/subnet-0b2631e90c07d2d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0b2631e90c07d2d1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870242392016",
            "vpc_id": "vpc-0b47cfddef4659960"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-vpc",
            "data.aws_availability_zones.rearc-quest-available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rearc-quest-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870242392016:vpc/vpc-0b47cfddef4659960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087721bb727a8c0a5",
            "default_route_table_id": "rtb-088a63e19f1d4fa1c",
            "default_security_group_id": "sg-0d51bd20810040002",
            "dhcp_options_id": "dopt-0aa17e6e2ebd0259d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b47cfddef4659960",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088a63e19f1d4fa1c",
            "owner_id": "870242392016"
          }
        }
      ]
    }
  ]
}